Added content markdown to navigate while structuring the website

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <br>
                     <p>Sou um desenvolvedor full-stack atualmente prestando serviço para a GAMA Saúde como Consultor da CuboConnect.</p>
                     <br>
-                    <p>Hobbies: Design de Logos, vetores, edição de vídeo, desenhos, 3D e fotografia</p>
+                    <p>Hobbies: Design de Logos, vetores, edição de vídeo, desenho, 3D e fotografia</p>
                 </div>
             </div>
         </section>
