--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/global_layout.css">
-    <link rel="stylesheet" href="css/about.css">
-    <link rel="stylesheet" href="css/skills.css">
-    <link rel="stylesheet" href="css/exp.css">
     
     <script type="text/javascript" src="js/general.js"></script>
     <title>Pinefolio</title>
@@ -18,9 +15,21 @@
     <header>
     </header>
     <main>
-        <div id="logoContainer">
-            <img id="willpineLogo" src="resources/imgs/willpine-logo-v2.svg" alt="willpine-logo">
-        </div>
+        <section id="front">
+            <div id="forntContainer">
+                <div class="titleContainer">
+                    Willian Yuiti
+                </div>
+                <div class="separationBar"></div>
+                <div class="textContainer">
+                    <p>Willian Yuiti é um desenvolvedor e consultor de software, atuando na análise, sustentação e programação de sistemas Enterprise.</p>
+                    <br/>
+                    <br/>
+                    <h2>Carreira</h2>
+                        <p>Willian começou e continua sua carreira na Cubo Connect, inicialmente como _Tester_ e então como desenvolvedor de software, realizando consultoria a várias empresas de saúde. Trabalhou na sustentação de diversos sistemas como consultor na Cubo Connect, Projetando e desenvolvendo APIs para a Central Nacional Unimed e Mirassol Transportadora, e hoje realiza a sustentação de sistemas para _Gama Saúde_, parte do grupo _Qualicorp_.</p>
+                </div>
+            </div>
+        </section>
         <section id="about">
             <div id="aboutContainer">
                 <div class="titleContainer">
@@ -30,53 +39,64 @@
                 <div class="textContainer">
                     <p class="name">Nome: Willian Yuiti Motta Oshiro</p>
                     <p>Idade: 21    Estado civil: Solteiro</p>
-                    <br>
-                    <p>Sou um desenvolvedor full-stack atualmente prestando serviço para a GAMA Saúde como Consultor da CuboConnect.</p>
-                    <br>
-                    <p>Hobbies: Design de Logos, vetores, edição de vídeo, desenho, 3D e fotografia</p>
+                    <br/>
+                    <p>Hobbies</p>
+                    <p> Desenho e arte digital, Design gráfico e customização desnecessária de sistemas operacionais.</p>
+                    <br/>
+                    <p>Competências</p>
+                    <p>Familiaridade com projeto, desenvolvimento e sustentação de sistemas Enterprise.</p>
+                    <p>Ótima em comunicação e trabalho em equipe.</p>
+                    <br/>
+                    <p>Metas</p>
+                    <ol>
+                        <li>Tornar-se um dev internacional com meu inglês.</li>
+                        <li>Dar um visual decente para este site.</li>
+                        <li>Produzir conteúdo para outros programadores.</li> 
+                    </ol>
                 </div>
             </div>
         </section>
         <section id="skills">
                 <div class="titleContainer">
-                    Competencias
+                    Ferramentas
                 </div>
                 <div class="separationBar"></div>
             <div id="skillsContainer">
                 <div class="textContainer">
-                <div class="titleContainer">
-                    Conhecimentos
-                </div>
-                    <p>Java - Intermediário</p>
+                    <p>Java - Avançado</p>
                     <div class="skillContainer">
-                        <div class="skill java">75%</div>
+                        <div class="skill java">3 anos de Experiência com Spring Framework.</div>
                     </div>
+                    <br/>
                     <p>Javascript - Intermediário</p>
                     <div class="skillContainer">
-                        <div class="skill javascript">70%</div>
+                        <div class="skill javascript">Conhecimento em Node, Deno, React, TypeScript.</div>
                     </div>
-                    <p>SQL - Básico</p>
+                    <br/>
+                    <p>SQL - Intermediário</p>
                     <div class="skillContainer">
-                        <div class="skill sql">40%</div>
+                        <div class="skill sql">2 anos de experiência com Oracle 11g.</div>
                     </div>
-                    <p>C# - Básico</p>
+                    <br/>
+                    <p>Linux - Avançado</p>
                     <div class="skillContainer">
-                        <div class="skill csharp">30%</div>
+                        <div class="skill linux">4 anos de experiência com Arch Linux.</div>
                     </div>
+                    <br/>
+                    <p>Git - Intermediário</p>
+                    <div class="skillContainer">
+                        <div class="skill linux">ntermediário, 3 anos de Experiência.</div>
+                    </div>
+                    <br/>
+                    <p>Inglês - Fluente</p>
                 </div>
-            </div>
-        </section>
-        <section id="exp">
-                <div class="titleContainer">
-                    Experiencia
-                </div>
-                <div class="separationBar"></div>
-            <div class="expContainer">
-                <div class="textContainer"></div>
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <p>Termos LinkedIn</p>
+        <p>Yuiti Tecnologia Eirelli 2023</p>
+    </footer>
 </body>
 
 </html>
