I don't remember all this

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                 <div class="separationBar"></div>
             <div id="skillsContainer">
                 <div class="textContainer">
+                <div class="titleContainer">
+                    Conhecimentos
+                </div>
                     <p>Java - Intermediário</p>
                     <div class="skillContainer">
                         <div class="skill java">75%</div>
