Added ZillaSlab font, dosis, varela, changed looks

--- a/index.html
+++ b/index.html
@@ -9,24 +9,27 @@
     <script type="text/javascript" src="js/general.js"></script>
     <title>Pinefolio</title>
     <link rel="icon" href="resources/imgs/icon200x200.png" type="image/icon type">
-</head>
+  </head>
 
 <body>
     <header>
     </header>
     <main>
         <section id="front">
-            <div id="forntContainer">
+            <div id="frontContainer">
                 <div class="titleContainer">
                     Willian Yuiti
                 </div>
+
                 <div class="separationBar"></div>
+
                 <div class="textContainer">
-                    <p>Willian Yuiti é um desenvolvedor e consultor de software, atuando na análise, sustentação e programação de sistemas Enterprise.</p>
-                    <br/>
-                    <br/>
-                    <h2>Carreira</h2>
+                    <p>Sou um desenvolvedor e consultor de software, como posso ajudar?</p>
+                </div>
+                    <div class="titleContainer">Carreira</div>
+                    <div class="textContainer">
                         <p>Willian começou e continua sua carreira na Cubo Connect, inicialmente como _Tester_ e então como desenvolvedor de software, realizando consultoria a várias empresas de saúde. Trabalhou na sustentação de diversos sistemas como consultor na Cubo Connect, Projetando e desenvolvendo APIs para a Central Nacional Unimed e Mirassol Transportadora, e hoje realiza a sustentação de sistemas para _Gama Saúde_, parte do grupo _Qualicorp_.</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -38,13 +41,13 @@
                 <div class="separationBar"></div>
                 <div class="textContainer">
                     <p class="name">Nome: Willian Yuiti Motta Oshiro</p>
-                    <p>Idade: 21    Estado civil: Solteiro</p>
+                    <p>Idade: 22    Estado civil: Solteiro</p>
                     <br/>
                     <p>Hobbies</p>
                     <p> Desenho e arte digital, Design gráfico e customização desnecessária de sistemas operacionais.</p>
                     <br/>
                     <p>Competências</p>
-                    <p>Familiaridade com projeto, desenvolvimento e sustentação de sistemas Enterprise.</p>
+                    <p>Familiaridade om projeto, desenvolvimento e sustentação de sistemas Enterprise.</p>
                     <p>Ótima em comunicação e trabalho em equipe.</p>
                     <br/>
                     <p>Metas</p>
