Added images and font changes

--- a/index.html
+++ b/index.html
@@ -5,97 +5,112 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/global_layout.css">
+    <link rel="icon" href="resources/imgs/icon200x200.png" type="image/icon type">
     
     <script type="text/javascript" src="js/general.js"></script>
+
     <title>Pinefolio</title>
-    <link rel="icon" href="resources/imgs/icon200x200.png" type="image/icon type">
   </head>
 
 <body>
-    <header>
-    </header>
-    <main>
-        <section id="front">
-            <div id="frontContainer">
-                <div class="titleContainer">
-                    Willian Yuiti
-                </div>
+  <header>
+  </header>
+  <main>
+    <section id="front">
 
-                <div class="separationBar"></div>
+      <div class="splashContainer">
+        <!-- <img class="javaIcon" src="resources/imgs/java.png" alt="java" > -->
+        <!-- <img class="springIcon" src="resources/imgs/spring-alpha.png" alt="spring" > -->
+        <!-- <img class="linuxIcon" src="resources/imgs/tux-alpha.png" alt="tux" > -->
+      </div>
 
-                <div class="textContainer">
-                    <p>Sou um desenvolvedor e consultor de software, como posso ajudar?</p>
-                </div>
-                    <div class="titleContainer">Carreira</div>
-                    <div class="textContainer">
-                        <p>Willian começou e continua sua carreira na Cubo Connect, inicialmente como _Tester_ e então como desenvolvedor de software, realizando consultoria a várias empresas de saúde. Trabalhou na sustentação de diversos sistemas como consultor na Cubo Connect, Projetando e desenvolvendo APIs para a Central Nacional Unimed e Mirassol Transportadora, e hoje realiza a sustentação de sistemas para _Gama Saúde_, parte do grupo _Qualicorp_.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="about">
-            <div id="aboutContainer">
-                <div class="titleContainer">
-                    Sobre
-                </div>
-                <div class="separationBar"></div>
-                <div class="textContainer">
-                    <p class="name">Nome: Willian Yuiti Motta Oshiro</p>
-                    <p>Idade: 22    Estado civil: Solteiro</p>
-                    <br/>
-                    <p>Hobbies</p>
-                    <p> Desenho e arte digital, Design gráfico e customização desnecessária de sistemas operacionais.</p>
-                    <br/>
-                    <p>Competências</p>
-                    <p>Familiaridade om projeto, desenvolvimento e sustentação de sistemas Enterprise.</p>
-                    <p>Ótima em comunicação e trabalho em equipe.</p>
-                    <br/>
-                    <p>Metas</p>
-                    <ol>
-                        <li>Tornar-se um dev internacional com meu inglês.</li>
-                        <li>Dar um visual decente para este site.</li>
-                        <li>Produzir conteúdo para outros programadores.</li> 
-                    </ol>
-                </div>
-            </div>
-        </section>
-        <section id="skills">
-                <div class="titleContainer">
-                    Ferramentas
-                </div>
-                <div class="separationBar"></div>
-            <div id="skillsContainer">
-                <div class="textContainer">
-                    <p>Java - Avançado</p>
-                    <div class="skillContainer">
-                        <div class="skill java">3 anos de Experiência com Spring Framework.</div>
-                    </div>
-                    <br/>
-                    <p>Javascript - Intermediário</p>
-                    <div class="skillContainer">
-                        <div class="skill javascript">Conhecimento em Node, Deno, React, TypeScript.</div>
-                    </div>
-                    <br/>
-                    <p>SQL - Intermediário</p>
-                    <div class="skillContainer">
-                        <div class="skill sql">2 anos de experiência com Oracle 11g.</div>
-                    </div>
-                    <br/>
-                    <p>Linux - Avançado</p>
-                    <div class="skillContainer">
-                        <div class="skill linux">4 anos de experiência com Arch Linux.</div>
-                    </div>
-                    <br/>
-                    <p>Git - Intermediário</p>
-                    <div class="skillContainer">
-                        <div class="skill linux">ntermediário, 3 anos de Experiência.</div>
-                    </div>
-                    <br/>
-                    <p>Inglês - Fluente</p>
-                </div>
-            </div>
-        </section>
-    </main>
+      <div class="sectionContainer">
+        <div class="titleContainer">
+            Willian Yuiti
+        </div>
+        <!-- <div class="separationBar"></div> -->
+        <div class="textContainer">
+            <p>Sou um desenvolvedor e consultor de software, como posso ajudar?</p>
+        </div>
+      </div>
+
+      <div class="sectionContainer">
+        <div class="titleContainer">Carreira</div>
+        <div class="textContainer">
+          <p>Cubo Connect</p>
+          <p>- Mirassol Transportadora, CNU, Ambev.</p>
+          <p>Connectmed Gama</p>
+          <p>- Qualicorp, Gama Saúde, Petrobras</p>
+        </div>
+      </div>
+    </section>
+
+      <section id="about">
+          <div class="sectionContainer">
+              <div class="titleContainer">
+                  Sobre
+              </div>
+              <!-- <div class="separationBar"></div> -->
+              <div class="textContainer">
+                  <p class="name">Nome: Willian Yuiti Motta Oshiro</p>
+                  <p>Idade: 22    Estado civil: Solteiro</p>
+                  <br/>
+                  <p>Hobbies</p>
+                  <p> Desenho e arte digital, Design gráfico e customização desnecessária de sistemas operacionais.</p>
+                  <br/>
+                  <p>Competências</p>
+                  <p>Familiaridade om projeto, desenvolvimento e sustentação de sistemas Enterprise.</p>
+                  <p>Ótima em comunicação e trabalho em equipe.</p>
+                  <br/>
+                  <p>Metas</p>
+                  <ol>
+                      <li>Tornar-se um dev internacional com meu inglês.</li>
+                      <li>Dar um visual decente para este site.</li>
+                      <li>Produzir conteúdo para outros programadores.</li> 
+                  </ol>
+              </div>
+          </div>
+      </section>
+
+      <section id="skills">
+          <div class="sectionContainer">
+              <div class="titleContainer">
+                  Ferramentas
+              </div>
+              <!-- <div class="separationBar"></div> -->
+          <div id="skillsContainer">
+              <div class="textContainer">
+                  <p>Java - Avançado</p>
+                  <div class="skillContainer">
+                      <div class="skill java">3 anos de Experiência com Spring Framework.</div>
+                  </div>
+                  <br/>
+                  <p>Javascript - Intermediário</p>
+                  <div class="skillContainer">
+                      <div class="skill javascript">Conhecimento em Node, Deno, React, TypeScript.</div>
+                  </div>
+                  <br/>
+                  <p>SQL - Intermediário</p>
+                  <div class="skillContainer">
+                      <div class="skill sql">2 anos de experiência com Oracle 11g.</div>
+                  </div>
+                  <br/>
+                  <p>Linux - Avançado</p>
+                  <div class="skillContainer">
+                      <div class="skill linux">4 anos de experiência com Arch Linux.</div>
+                  </div>
+                  <br/>
+                  <p>Git - Intermediário</p>
+                  <div class="skillContainer">
+                      <div class="skill linux">ntermediário, 3 anos de Experiência.</div>
+                  </div>
+                  <br/>
+                  <p>Inglês - Fluente</p>
+              </div>
+          </div>
+        </div>
+      </section>
+  </main>
     <footer>
         <p>Termos LinkedIn</p>
         <p>Yuiti Tecnologia Eirelli 2023</p>
