--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section id="front">
 
       <div class="splashContainer">
-        <!-- <img class="javaIcon" src="resources/imgs/java.png" alt="java" > -->
+        <img class="javaIcon" src="resources/imgs/java.png" alt="java" >
         <!-- <img class="springIcon" src="resources/imgs/spring-alpha.png" alt="spring" > -->
         <!-- <img class="linuxIcon" src="resources/imgs/tux-alpha.png" alt="tux" > -->
       </div>
@@ -37,10 +37,11 @@
       <div class="sectionContainer">
         <div class="titleContainer">Carreira</div>
         <div class="textContainer">
-          <p>Cubo Connect</p>
-          <p>- Mirassol Transportadora, CNU, Ambev.</p>
-          <p>Connectmed Gama</p>
-          <p>- Qualicorp, Gama Saúde, Petrobras</p>
+          <p class="subTitle">Cubo Connect</p>
+          <p>Dev Júnior - Desenvolvimento de APIs para Ambev e UNIMED</p>
+        </br>
+          <p class="subTitle">Connectmed Gama</p>
+          <p>Dev Pleno - Equipe de melhorias e bugs emergenciais</p>
         </div>
       </div>
     </section>
@@ -55,14 +56,14 @@
                   <p class="name">Nome: Willian Yuiti Motta Oshiro</p>
                   <p>Idade: 22    Estado civil: Solteiro</p>
                   <br/>
-                  <p>Hobbies</p>
+                  <p class="subTitle">Hobbies</p>
                   <p> Desenho e arte digital, Design gráfico e customização desnecessária de sistemas operacionais.</p>
                   <br/>
-                  <p>Competências</p>
-                  <p>Familiaridade om projeto, desenvolvimento e sustentação de sistemas Enterprise.</p>
+                  <p class="subTitle">Competências</p>
+                  <p>Familiaridade com projeto, desenvolvimento e sustentação de sistemas Enterprise.</p>
                   <p>Ótima em comunicação e trabalho em equipe.</p>
                   <br/>
-                  <p>Metas</p>
+                  <p class="subTitle">Metas</p>
                   <ol>
                       <li>Tornar-se um dev internacional com meu inglês.</li>
                       <li>Dar um visual decente para este site.</li>
@@ -80,32 +81,32 @@
               <!-- <div class="separationBar"></div> -->
           <div id="skillsContainer">
               <div class="textContainer">
-                  <p>Java - Avançado</p>
+                  <p class="subTitle">Java</p>
                   <div class="skillContainer">
                       <div class="skill java">3 anos de Experiência com Spring Framework.</div>
                   </div>
                   <br/>
-                  <p>Javascript - Intermediário</p>
+                  <p class="subTitle">Javascript</p>
                   <div class="skillContainer">
                       <div class="skill javascript">Conhecimento em Node, Deno, React, TypeScript.</div>
                   </div>
                   <br/>
-                  <p>SQL - Intermediário</p>
+                  <p class="subTitle">SQL</p>
                   <div class="skillContainer">
                       <div class="skill sql">2 anos de experiência com Oracle 11g.</div>
                   </div>
                   <br/>
-                  <p>Linux - Avançado</p>
+                  <p class="subTitle">Linux</p>
                   <div class="skillContainer">
                       <div class="skill linux">4 anos de experiência com Arch Linux.</div>
                   </div>
                   <br/>
-                  <p>Git - Intermediário</p>
+                  <p class="subTitle">Git</p>
                   <div class="skillContainer">
-                      <div class="skill linux">ntermediário, 3 anos de Experiência.</div>
+                      <div class="skill linux">3 anos de Experiência.</div>
                   </div>
                   <br/>
-                  <p>Inglês - Fluente</p>
+                  <p class="subTitle">Inglês - Fluente</p>
               </div>
           </div>
         </div>
