Better line spacing cleanup of css

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
       <div class="splashContainer">
         <img class="javaIcon" src="resources/imgs/java.png" alt="java" >
-        <!-- <img class="springIcon" src="resources/imgs/spring-alpha.png" alt="spring" > -->
-        <!-- <img class="linuxIcon" src="resources/imgs/tux-alpha.png" alt="tux" > -->
+        <img class="springIcon" src="resources/imgs/spring-alpha.png" alt="spring" >
+        <img class="linuxIcon" src="resources/imgs/tux-alpha.png" alt="tux" >
       </div>
 
       <div class="sectionContainer">
