--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="pt">
 
 <head>
@@ -7,7 +8,7 @@
     <link rel="stylesheet" href="css/global_layout.css">
     <link rel="icon" href="resources/imgs/icon200x200.png" type="image/icon type">
     
-    <script type="text/javascript" src="js/general.js"></script>
+    <!-- <script type="text/javascript" src="js/general.js"></script> -->
 
     <title>Pinefolio</title>
   </head>
