--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/global_layout.css">
+    <link rel="stylesheet" href="css/background.css">
+    
     <link rel="icon" href="resources/imgs/icon200x200.png" type="image/icon type">
     
-    <!-- <script type="text/javascript" src="js/general.js"></script> -->
+    <script type="text/javascript" src="js/general.js"></script>
 
     <title>Pinefolio</title>
   </head>
@@ -20,9 +22,9 @@
     <section id="front">
 
       <div class="splashContainer">
-        <img class="javaIcon" src="resources/imgs/java.png" alt="java" >
-        <img class="springIcon" src="resources/imgs/spring-alpha.png" alt="spring" >
-        <img class="linuxIcon" src="resources/imgs/tux-alpha.png" alt="tux" >
+        <!-- <img class="javaIcon" src="resources/imgs/java.png" alt="java" > -->
+        <img class="springIcon" src="resources/imgs/java-alpha.png" alt="spring" >
+        <!-- <img class="linuxIcon" src="resources/imgs/tux-alpha.png" alt="tux" > -->
       </div>
 
       <div class="sectionContainer">
@@ -61,15 +63,13 @@
                   <p> Desenho e arte digital, Design gráfico e customização desnecessária de sistemas operacionais.</p>
                   <br/>
                   <p class="subTitle">Competências</p>
-                  <p>Familiaridade com projeto, desenvolvimento e sustentação de sistemas Enterprise.</p>
+                  <p>Familiaridade com projetos, desenvolvimento e sustentação de sistemas Enterprise.</p>
                   <p>Ótima em comunicação e trabalho em equipe.</p>
                   <br/>
                   <p class="subTitle">Metas</p>
-                  <ol>
-                      <li>Tornar-se um dev internacional com meu inglês.</li>
-                      <li>Dar um visual decente para este site.</li>
-                      <li>Produzir conteúdo para outros programadores.</li> 
-                  </ol>
+                    <p>+ Tornar-se um dev internacional com meu inglês.</p>
+                    <p>+ Dar um visual decente para este site.</p>
+                    <p>+ Produzir conteúdo para outros programadores.</p> 
               </div>
           </div>
       </section>
