--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <section id="front">
 
       <div class="splashContainer">
-        <!-- <img class="javaIcon" src="resources/imgs/java.png" alt="java" > -->
-        <img class="springIcon" src="resources/imgs/java-alpha.png" alt="spring" >
-        <!-- <img class="linuxIcon" src="resources/imgs/tux-alpha.png" alt="tux" > -->
+        <img class="springIcon" src="resources/imgs/spring-alpha.png" alt="spring" >
+        <img class="javaIcon" src="resources/imgs/java-alpha.png" alt="java" >
+        <img class="linuxIcon" src="resources/imgs/tux-alpha.png" alt="tux" >
       </div>
 
       <div class="sectionContainer">
