Adicionado icone da carreira

--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
   <main>
     <section id="front">
 
-      <div class="splashContainer">
-        <img class="springIcon" src="resources/imgs/spring-alpha.png" alt="spring" >
-        <img class="javaIcon" src="resources/imgs/java-alpha.png" alt="java" >
-        <img class="linuxIcon" src="resources/imgs/tux-alpha.png" alt="tux" >
-      </div>
 
       <div class="sectionContainer">
         <div class="titleContainer">
@@ -37,13 +32,16 @@
         </div>
       </div>
 
+      <div class="splashContainer">
+        <img class="springIcon" src="resources/imgs/carreer.png" alt="carreer" >
+      </div>
       <div class="sectionContainer">
         <div class="titleContainer">Carreira</div>
         <div class="textContainer">
-          <p class="subTitle">Cubo Connect</p>
+          <p class="subTitle">Cubo Connect / 2019 -> 2021</p>
           <p>Dev Júnior - Desenvolvimento de APIs para Ambev e UNIMED</p>
         </br>
-          <p class="subTitle">Connectmed Gama</p>
+          <p class="subTitle">Connectmed Gama / 2022 -> presente</p>
           <p>Dev Pleno - Equipe de melhorias e bugs emergenciais</p>
         </div>
       </div>
@@ -63,16 +61,21 @@
                   <p> Desenho e arte digital, Design gráfico e customização desnecessária de sistemas operacionais.</p>
                   <br/>
                   <p class="subTitle">Competências</p>
-                  <p>Familiaridade com projetos, desenvolvimento e sustentação de sistemas Enterprise.</p>
-                  <p>Ótima em comunicação e trabalho em equipe.</p>
+                  <p>+ Familiaridade com projetos, desenvolvimento e sustentação de sistemas Enterprise.</p>
+                  <p>+ Ótima em comunicação e trabalho em equipe.</p>
                   <br/>
                   <p class="subTitle">Metas</p>
-                    <p>+ Tornar-se um dev internacional com meu inglês.</p>
-                    <p>+ Dar um visual decente para este site.</p>
-                    <p>+ Produzir conteúdo para outros programadores.</p> 
+                    <p>[ ] Tornar-se um dev internacional com meu inglês.</p>
+                    <p>[ ] Dar um visual decente para este site.</p>
+                    <p>[ ] Produzir conteúdo para outros programadores.</p> 
               </div>
           </div>
       </section>
+      <div class="splashContainer">
+        <img class="springIcon" src="resources/imgs/spring-alpha.png" alt="spring" >
+        <img class="javaIcon" src="resources/imgs/java-alpha.png" alt="java" >
+        <img class="linuxIcon" src="resources/imgs/tux-alpha.png" alt="tux" >
+      </div>
 
       <section id="skills">
           <div class="sectionContainer">
