--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   <br/>
                   <p class="subTitle">Competências</p>
                   <p>+ Familiaridade com projetos, desenvolvimento e sustentação de sistemas Enterprise.</p>
-                  <p>+ Ótima em comunicação e trabalho em equipe.</p>
+                  <p>+ Ótima comunicação e trabalho em equipe.</p>
                   <br/>
                   <p class="subTitle">Metas</p>
                     <p>[ ] Tornar-se um dev internacional com meu inglês.</p>
