varelaRound added as a font

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     
     <link rel="icon" href="resources/imgs/icon200x200.png" type="image/icon type">
     
-    <script type="text/javascript" src="js/general.js"></script>
-
     <title>Pinefolio</title>
   </head>
 
@@ -46,6 +44,12 @@
         </div>
       </div>
     </section>
+
+      <div class="splashContainer">
+        <!-- TODO : Imagem com minha face -->
+        <img class="springIcon" src="resources/imgs/carreer.png" alt="carreer" >
+      </div>
+
 
       <section id="about">
           <div class="sectionContainer">
@@ -117,9 +121,10 @@
       </section>
   </main>
     <footer>
-        <p>Termos LinkedIn</p>
+        <a href="https://br.linkedin.com/in/willian-yuiti-21138014b">LinkedIn</a>
+        <a href="https://github.com/Willpine/Willpine">Github</a>
         <p>Yuiti Tecnologia Eirelli 2023</p>
-    </footer>
+    </fLinkedIn
 </body>
 
 </html>
